Fix #111588: Cycles: Vector displacement with adaptive subdiv breaks normal

The compact form of the differential is not enough here, we need to store
and use the full vectors for bump evaluation.

Pull Request: https://projects.blender.org/blender/blender/pulls/112987