intern/cycles/kernel/svm/bump.h
@@ -30,6 +30,10 @@ ccl_device_noinline void svm_node_enter_bump_eval(KernelGlobals kg,
 
     sd->P = P;
     sd->dP = differential_make_compact(dP);
+
+    /* Save the full differential, the compact form isn't enough for svm_node_set_bump. */
+    stack_store_float3(stack, offset + 4, dP.dx);
+    stack_store_float3(stack, offset + 7, dP.dy);
   }
 }
 
